Adjust file structure